[#2] Added DELETE endpoint
